kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision15.sem

function Bar(): Integer {
  Integer."1"
}

function Bar(): Integer {
  Integer."1"
}
